--- a/tinyarchive/templates/home.html
+++ b/tinyarchive/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div class="page_title">
+
    <h1> The Tiny Archive </h1>
 </div>
 <div class="intro">
@@ -10,7 +10,7 @@
 <ul>
     <li><a href="archive/">Archives</a> </li>
     <li> <a href="exhibit/"> Exhibits </a></li>
-    <li> About Us </li>
+    <li> <a href="about_us/"> About Us</a> </li>
 </ul>
 
 {% endblock %}
