--- a/tinyarchive/templates/home.html
+++ b/tinyarchive/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div class="page_title"></div>
+<div class="page_title">
    <h1> The Tiny Archive </h1>
 </div>
 <div class="intro">
