Nav bar & header changes

--- a/tinyarchive/archive/templates/archive/index.html
+++ b/tinyarchive/archive/templates/archive/index.html
@@ -2,10 +2,10 @@
 {% load static %}
 {% block content %}
 <div class="breadcrumb">
-    <a href="/"> Tiny Library  </a>
+    <h3><a href="/"> Tiny Library  </a></h3>
 </div>
 <div class="page_title">
-    The Archive
+    <h1>The Archive</h1>
 </div>
 
 
