--- a/tinyarchive/templates/home.html
+++ b/tinyarchive/templates/home.html
@@ -4,13 +4,15 @@
 <div class="page_title">
    <h1> The Tiny Archive </h1>
 </div>
-<div class="intro">
-    Welcome to the Tiny Archive! We are happy to meet you! We are small, but still growing.
-</div>
+<div class="nav">
 <ul>
     <li><a href="archive/">Archives</a> </li>
     <li> <a href="exhibit/"> Exhibits </a></li>
     <li> <a href="about_us/"> About Us</a> </li>
 </ul>
+</div>
+<div class="intro">
+    Welcome to the Tiny Archive! We are happy to meet you! We are small, but still growing.
+</div>
 
 {% endblock %}
