added static Rock N Roll Timeline svg

--- a/tinyarchive/exhibit/templates/exhibit/index.html
+++ b/tinyarchive/exhibit/templates/exhibit/index.html
@@ -19,4 +19,8 @@
     {% endif %}
 </div>
 
+<div class="svg-container">
+    <img src="{% static 'Dig_Hum_Archive/tinyarchive/static/Rock N Roll Timeline.svg' %}" alt="SVG Rock N Roll Timeline">
+</div>
+
 {% endblock %}
