--- a/tinyarchive/static/style.css
+++ b/tinyarchive/static/style.css
@@ -83,3 +83,16 @@ p a{
     width: 100%; 
     font-size: large;
 }
+
+.svg-container {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    width: 100%; 
+    height: 300px; 
+}
+
+.svg-container img {
+    max-width: 100%;
+    max-height: 100%;
+}
