--- a/tinyarchive/exhibit/templates/exhibit/index.html
+++ b/tinyarchive/exhibit/templates/exhibit/index.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="svg-container">
-    <img src="{% static 'Dig_Hum_Archive/tinyarchive/static/Rock N Roll Timeline.svg' %}" alt="SVG Rock N Roll Timeline">
+    <img src="{% static 'Rock N Roll Timeline.svg' %}" alt="SVG Rock N Roll Timeline">
 </div>
 
 {% endblock %}
