--- a/tinyarchive/static/style.css
+++ b/tinyarchive/static/style.css
@@ -88,11 +88,11 @@ p a{
     display: flex;
     justify-content: center; 
     align-items: center; 
-    width: 100%; 
-    height: 300px; 
+    /* width: 100%;  */
+    /* height: 300px;  */
 }
 
 .svg-container img {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 75%;
+    max-height: 75%;
 }
