--- a/tinyarchive/templates/home.html
+++ b/tinyarchive/templates/home.html
@@ -14,5 +14,10 @@
 <div class="intro">
     Welcome to the Tiny Archive! We are happy to meet you! We are small, but still growing.
 </div>
-
+<div class="Rock">
+    <h1>Rock Through The Decades</h1>
+</div>
+<div class="svg-container">
+    <img src="{% static 'An_Archive_of_Vinyl_Rock_Records.png' %}" alt="PNG Rock Records Vinyl">
+</div>
 {% endblock %}
