--- a/tinyarchive/static/style.css
+++ b/tinyarchive/static/style.css
@@ -96,3 +96,12 @@ p a{
     max-width: 75%;
     max-height: 75%;
 }
+.Rock h1{
+    background-color: #f2ebdc;
+    color: #D9863D;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.intro {
+    padding: 20px;
+}
