--- a/tinyarchive/templates/about_us.html
+++ b/tinyarchive/templates/about_us.html
@@ -1,17 +1,30 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+<div class="breadcrumb">
+    <a href="/"> Tiny Library </a>
 <div class="page_title">
    <h1> About Us </h1>
 </div>
 <div class="intro">
     Welcome to the About Us! We are happy to meet you! We are small, but still growing.
 </div>
-<ul>
-    <li>Noah</a> </li>
-    <li>Rhyu</a></li>
-    <li>Rhea</a></li>
-    <li>Jasmine</a></li>
-</ul>
+
+<div class="about">
+    <h2> Who We Are </h2>
+    <p> </p>
+<h2> What We Learned </h2>
+<p> Rhyu was in charge of all of the CSS & HTML pages. 
+        In the project, they were responsible for writing the HTML and CSS for the webpage. 
+        For the HTML part, they structured the content using various tags, defining the layout 
+        and organizing elements such as text, images, and multimedia. This helped establish 
+        a clear hierarchy and flow of information on the site. On the CSS side, they focused on 
+        styling, carefully selecting colors, fonts, and spacing to create an appealing visual 
+        design. They also utilized CSS to position elements precisely and ensure the webpage looked 
+        great on different devices. By combining HTML's structure with CSS's styling, they were able to bring the webpage to life, 
+        creating a user-friendly and engaging experience for visitors.</p>
+<h2> Our Process </h2>
+</div>
+
 
 {% endblock %}
