--- a/tinyarchive/archive/templates/archive/item_audiofile.html
+++ b/tinyarchive/archive/templates/archive/item_audiofile.html
@@ -23,7 +23,7 @@
             <li>Description: <p>{{item.description}}</p> </li>
             <li>Artist/Band: {{item.artist}}</li>
             <li>Record Label: {{item.record_label}}</li>
-            <li>Release Date: {{item.recording_date}}</li>
+            <li>Release Date: {{item.release_date}}</li>
             <li><audio controls>
                 <source src ="{% get_media_prefix %}{{ item.audio_file }}" type="audio/mpeg"/> 
                
