--- a/tinyarchive/templates/about_us.html
+++ b/tinyarchive/templates/about_us.html
@@ -13,7 +13,7 @@
 <div class="about">
     <h2> Who We Are </h2>
     <p> </p>
-<h2> What We Learned </h2>
+<h2> What We Learned/Our Process </h2>
 <p> Rhyu was in charge of all of the CSS & HTML pages. 
         In the project, they were responsible for writing the HTML and CSS for the webpage. 
         For the HTML part, they structured the content using various tags, defining the layout 
@@ -23,7 +23,6 @@
         design. They also utilized CSS to position elements precisely and ensure the webpage looked 
         great on different devices. By combining HTML's structure with CSS's styling, they were able to bring the webpage to life, 
         creating a user-friendly and engaging experience for visitors.</p>
-<h2> Our Process </h2>
 </div>
 
 
