--- a/tinyarchive/templates/about_us.html
+++ b/tinyarchive/templates/about_us.html
@@ -12,7 +12,11 @@
 
 <div class="about">
     <h2> Who We Are </h2>
-    <p> </p>
+    <ul>
+        <li>Rhyu Olide - Digital Media & Design '25</li> 
+        <li>Noah David - Mechanical Engineering '24</li>
+        <li>Rhea Dias - Art Practice & Design '23</li>
+    </ul>
 <h2> What We Learned/Our Process </h2>
 <p> Rhyu was in charge of all of the CSS & HTML pages. 
         In the project, they were responsible for writing the HTML and CSS for the webpage. 
