--- a/tinyarchive/templates/about_us.html
+++ b/tinyarchive/templates/about_us.html
@@ -25,6 +25,7 @@
             <p>Noah David - Mechanical Engineering '24</p>
         </div>
         <div class="image3">
+            <img src="{% static 'rhea.jpg' %}" alt="Noah Headshot">
         </div>
         <div class="text3">
             <p>Rhea Dias - Art Practice & Design '23</p>
