--- a/tinyarchive/templates/about_us.html
+++ b/tinyarchive/templates/about_us.html
@@ -3,22 +3,22 @@
 {% block content %}
 <div class="breadcrumb">
     <a href="/"> Tiny Library </a>
-<div class="page_title">
-   <h1> About Us </h1>
-</div>
-<div class="intro">
-    Welcome to the About Us! We are happy to meet you! We are small, but still growing.
-</div>
+    <div class="page_title">
+        <h1> About Us </h1>
+    </div>
+    <div class="intro">
+        Welcome to the About Us! We are happy to meet you! We are small, but still growing.
+    </div>
 
-<div class="about">
-    <h2> Who We Are </h2>
-        <div class = "image1">
+    <div class="about">
+        <h2> Who We Are </h2>
+        <div class="image1">
             <img src="{% static 'rhyu_pic.jpg' %}" alt="Rhyu Headshot">
         </div>
         <div class="text1">
             <p>Rhyu Olide - Digital Media & Design '25</p>
         </div>
-        <div class = "image2">
+        <div class="image2">
             <img src="{% static 'insta_profile_pick.jpg' %}" alt="Noah Headshot">
         </div>
         <div class="text2">
@@ -30,22 +30,35 @@
         <div class="text3">
             <p>Rhea Dias - Art Practice & Design '23</p>
         </div>
-    </ul>
-<h2> What We Learned/Our Process </h2>
-<p> Rhyu was in charge of all of the CSS & HTML pages. 
-        In the project, they were responsible for writing the HTML and CSS for the webpage. 
-        For the HTML part, they structured the content using various tags, defining the layout 
-        and organizing elements such as text, images, and multimedia. This helped establish 
-        a clear hierarchy and flow of information on the site. On the CSS side, they focused on 
-        styling, carefully selecting colors, fonts, and spacing to create an appealing visual 
-        design. They also utilized CSS to position elements precisely and ensure the webpage looked 
-        great on different devices. By combining HTML's structure with CSS's styling, they were able to bring the webpage to life, 
-        creating a user-friendly and engaging experience for visitors.</p>
-<p>Using Python and Django, Noah crafted a responsive backend for the digital archive. Python's power enabled him to design a robust system that efficiently manages data storage and retrieval. Django's versatility facilitated secure user authentication, authorization, and advanced functionalities like search and filtering. This dynamic Python-Django combination formed the core of the comprehensive digital archive's backend. Noah also uploaded the sounds for each of the vinyl records and collected their metadata. Delving into Python and Django revealed the potential of backend development for creating organized and secure digital platforms. This experience has not only broadened his skill set but also deepened his understanding of crafting impactful digital archives that seamlessly bridge form and function.</p>
-<p>Rhea extensively researched rock music subgenres and its evolution, creating a detailed timeline with chosen records using chronological data. Utilizing Figma's design tools, Rhea crafted quality visuals, exported them as scalable vector graphics, and integrated them with the exhibit page using HTML and CSS. Additionally, she researched and wrote concise yet impactful descriptions for the five selected rock records, emphasizing their unique attributes and contributions to the genre. She learned to use div classes to structure and style web page sections. Incorporating images and SVGs, Rhea grasped the art of visual storytelling, while centering and padding techniques have refined layouts and provided space for readability. 
+        </ul>
+        <h2> What We Learned/Our Process </h2>
+        <p>Rhyu was in charge of all of the CSS & HTML pages. In the project, they were responsible for writing the HTML
+            and CSS for the webpage. For the HTML part, they structured the content using various tags, defining the
+            layout and organizing elements such as text, images, and multimedia. This helped establish a clear hierarchy
+            and flow of information on the site. On the CSS side, they focused on
+            styling, carefully selecting colors, fonts, and spacing to create an appealing visual
+            design. They also utilized CSS to position elements precisely and ensure the webpage looked
+            great on different devices. By combining HTML's structure with CSS's styling, they were able to bring the
+            webpage to life, creating a user-friendly and engaging experience for visitors.</p>
+        <p>Using Python and Django, Noah crafted a responsive backend for the digital archive. Python's power enabled
+            him to design a robust system that efficiently manages data storage and retrieval. Django's versatility
+            facilitated secure user authentication, authorization, and advanced functionalities like search and
+            filtering. This dynamic Python-Django combination formed the core of the comprehensive digital archive's
+            backend. Noah also uploaded the sounds for each of the vinyl records and collected their metadata. Delving
+            into Python and Django revealed the potential of backend development for creating organized and secure
+            digital platforms. This experience has not only broadened his skill set but also deepened his understanding
+            of crafting impactful digital archives that seamlessly bridge form and function. Noah was also responsible
+            for the git workflow, allowing everyone to be able to work on their part at the same time. This included
+            trouble shooting any git problems and merging everyone’s branches together.</p>
+        <p>Rhea extensively researched rock music subgenres and its evolution, creating a detailed timeline with chosen
+            records using chronological data. Utilizing Figma's design tools, Rhea crafted quality visuals, exported
+            them as scalable vector graphics, and integrated them with the exhibit page using HTML and CSS.
+            Additionally, she researched and wrote concise yet impactful descriptions for the five selected rock
+            records, emphasizing their unique attributes and contributions to the genre. She learned to use div classes
+            to structure and style web page sections. Incorporating images and SVGs, Rhea grasped the art of visual
+            storytelling, while centering and padding techniques have refined layouts and provided space for
+            readability.</p>
+    </div>
 
-</p>
-</div>
 
-
-{% endblock %}
+    {% endblock %}
